/*
MIT License
Copyright(c) 2022 Futurewei Cloud
    Permission is hereby granted,
    free of charge, to any person obtaining a copy of this software and associated documentation files(the "Software"), to deal in the Software without restriction,
    including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and / or sell copies of the Software, and to permit persons
    to whom the Software is furnished to do so, subject to the following conditions:
    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
    WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
*/
syntax="proto3";
package common;
option go_package = "github.com/futurewei-cloud/merak/api/proto/v1/common;common";

enum OperationType {
    INFO = 0;
    CREATE = 1;
    UPDATE = 2;
    DELETE = 3;
    CLEAN = 4;
  }

enum MessageType {
    FULL = 0;
    DELTA = 1;
}

enum ReturnCode {
  OK = 0;
  FAILED = 1;
}

enum Status {
  NONE = 0;
  DEPLOYING = 1;
  READY = 2;
  DELETING = 3;
  UPDATING = 4;
  ERROR = 5;
  DONE = 6;
}

message ReturnMessage {
  ReturnCode return_code = 1;
  string return_message = 2;
}

message InternalServiceInfo {
  OperationType operation_type = 1;
  string id = 2;
  string name = 3;
  string cmd = 4;
  string url = 5;
  repeated string parameters = 6;
  repeated uint32 return_code = 7;
  repeated string return_string = 8;
  string when_to_run = 9;
  string where_to_run = 10;
}

message InternalHostInfo {
  string ip = 1;
  repeated string routing_rules = 2;
  Status status = 3;
}

message InternalComputeInfo {
  OperationType operation_type = 1;
  string id = 2;
  string name = 3;
  string datapath_ip = 4;
  string mac = 5;
  string veth = 6;
  string container_ip = 7;
  Status status = 8;
}

message InternalSubnetInfo {
  string subnet_id = 1;
  string subnet_cidr = 2;
  string subnet_gw = 3;
  uint32 number_vms = 4;
}

message InternalVpcInfo {
  string vpc_id = 1;
  string tenant_id = 2;
  string project_id = 3;
  string vpc_cidr = 4;
  repeated InternalSubnetInfo subnets = 5;
}
